# findatree

./: .gitignore  README.md  README.rst  environment.yml  environment_22-03-08.yml  environment_22-06-16.yml  environment_22-06-29.yml  environment_22-07-06.yml  own.mplstyle  pyproject.toml  requirements.txt  setup.py
example-data/: DGM.tif  coordinates.csv
findatree/: __init__.py  descriptions.py  exporter.py  geo_to_image.py  interactive.py  io.py  object_properties.py  photometric.py  segmentation.py  segmentation2.py  transform.py  transformations.py  visualize.py
findatree/photometric/: features.py  shadow.py
scripts/: dbscan.ipynb  detect_in_chm.py  load_dsm-dtm-ortho.ipynb  load_preprocessed.ipynb  segment.ipynb  test_shape-files.ipynb  watershed_v01.ipynb
scripts/analysis/: color-ratios.ipynb  random-forest_classify_v01.ipynb  random-forest_plot.ipynb  veg-index.ipynb
scripts/batch/: batch_init_all.ipynb  batch_rename_files.ipynb  batch_update_crowns_human.ipynb  batch_update_features_photometric.ipynb
scripts/compare/: correlation_px_vegindex.ipynb  features_terrestrial_vs_photometric.ipynb
scripts/ipynb/: load_preprocessed.ipynb
scripts/py/: batch_init.py
scripts/single/: single_export_regions.ipynb  single_init_all.ipynb  single_update_features_photometric.ipynb
styles/: own.mplstyle
z.old/environments/: environment_22-03-12.yml  environment_22-03-17.yml  environment_22-04-08.yml
z.old/modules/: 21-08-31_detect.py  22-04-05_segmentation.py  22-04-08_object_properties.py
z.old/scripts/: 22-02-15_CannyEdge.ipynb
(+37 files in other folders)
