[tool.poetry]
name = "findatree"
version = "0.1.1"
description = "Open-source object-based analysis of forest health using drone data."
authors = ["Stehr Florian"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = ">=1.23"
pandas = "^1.5.3"
numba = "^0.56.4"
scipy = "^1.10.1"
tqdm = "^4.64.1"
h5py = "^3.8.0"

[tool.poetry.group.editor.dependencies]
ipykernel = "^6.21.2"
jupyterlab = "^3.6.1"
jupyterthemes = "^0.20.0"

[tool.poetry.group.plot.dependencies]
matplotlib = "^3.7.0"
bokeh = "^3.0.3"

[tool.poetry.group.image.dependencies]
opencv-python-headless = "^4.7.0.72"
scikit-image = "^0.19.3"

[tool.poetry.group.geo.dependencies]
rasterio = "^1.3.6"
pyshp = "^2.3.1"
geojson = "^3.0.1"
shapely = "^2.0.1"

[tool.poetry.group.learn.dependencies]
scikit-learn = "^1.2.1"
xgboost = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
